[tool.poetry]
name = "pandas-two-testing"
version = "0.1.0"
description = ""
authors = ["Avanindra Kumar Pandeya <akpandeya1@gmail.com>"]
readme = "README.md"
packages = [{include = "pandas_two_testing"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"


[tool.poetry.group.pre-commit.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
